# torch-serve-hf-textgen

./: .gitignore  Makefile  README.md  docker-compose.yml  dockerfile.app  dockerfile.ts  fastapi_app.py  pyproject.toml  requirement.txt
config/: config.properties
handlers/: hf_text_generation_handler.py  transformers_classifier_handler.py
scripts/: download_model.py
