[tool.poetry]
name = "torch-serve-hf-textgen"
version = "0.1.0"
description = ""
authors = ["Allen Chou <allen.chou@aiello.ai>"]
license = "Private"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pydantic = "^2"
pytz = "*"
rich = "*"
typing-extensions = "^4.7.0"
aiohttp = { version = "^3.9.1", optional = true }
einops = { version = "^0.7.0", optional = true }
fastapi = { extras = ["all"], version = "^0.105.0", optional = true }
huggingface-hub = { extras = ["cli"], version = "^0.19.4", optional = true }
nvgpu = { version = "^0.10.0", optional = true }
protobuf = { version = "^4.25.1", optional = true }
pydantic-settings = { version = "^2", optional = true }
python-dotenv = { version = "^1.0.0", optional = true }
sentencepiece = { version = "^0.1.99", optional = true }
torch-model-archiver = { version = "^0.9.0", optional = true }
torch-workflow-archiver = { version = "^0.2.11", optional = true }
torchserve = { version = "^0.9.0", optional = true }
transformers = { extras = ["torch"], version = "^4.35.2", optional = true }
yarl = { version = "^1.9.4", optional = true }

[tool.poetry.extras]
all = [
    "aiohttp",
    "einops",
    "fastapi",
    "huggingface-hub",
    "nvgpu",
    "protobuf",
    "pydantic-settings",
    "python-dotenv",
    "sentencepiece",
    "torch-model-archiver",
    "torch-workflow-archiver",
    "torchserve",
    "transformers",
    "yarl",
]
ts = [
    "einops",
    "huggingface-hub",
    "nvgpu",
    "protobuf",
    "python-dotenv",
    "sentencepiece",
    "torch-model-archiver",
    "torch-workflow-archiver",
    "torchserve",
    "transformers",
]
fastapi = ["fastapi", "python-dotenv", "aiohttp", "pydantic-settings", "yarl"]

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
